# readium-rs

./: .gitignore  Cargo.toml  Dockerfile.kobo  Dockerfile.kobo-nightly  KOBO_BUILD.md  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
certs/: provider.der  provider_private.der  root_ca.der
crates/lcp-cli/: Cargo.toml
crates/lcp-cli/src/: main.rs
crates/lcp-core/: Cargo.toml
crates/lcp-core/src/: lib.rs
crates/lcp-core/src/crypto/: mod.rs  signature.rs  transform.rs
crates/lcp-core/src/epub/: mod.rs  xml_utils.rs
crates/lcp-core/src/license/: lcp_license.rs  mod.rs  profile.rs  status.rs
crates/lcp-server/: Cargo.toml
crates/lcp-server/migrations/: 001_initial.sql
crates/lcp-server/src/: main.rs
crates/plugin/: Cargo.toml
crates/plugin-test/src/: lib.rs
crates/plugin/include/: lcp_decrypt.h
crates/plugin/lcpreader.koplugin/: _meta.lua  main.lua
crates/plugin/src/: ffi.rs
lcpreader.koplugin/: main.lua
src/: epub.rs  key.rs  lib.rs  main.rs
src/crypto/: cipher.rs  key.rs  signature.rs
src/epub/: mod.rs  xml_utils.rs
src/license/: encoding.rs  mod.rs  profile.rs  status.rs
