[package]
name = "lcp-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
lcp-core = { path = "../lcp-core" }
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1"
