[package]
name = "lcp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
base64 = "0.22.1"
block-padding = "0.3"
cbc = { version = "0.1", features = ["alloc"] }
chrono = "0.4.41"
flate2 = "1.0"
hex = "0.4.3"
rand = "0.9.2"
roxmltree = "0.21.1"
rsa = "0.9.10"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
sha2 = { version = "0.10.9", features = ["oid"] }
thiserror = "2"
uuid = { version = "1.22.0", features = ["v4"] }
x509-cert = "0.2.5"
zeroize = { version = "1", features = ["zeroize_derive", "serde"] }
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
